@@ -145,7 +145,8 @@ main (int argc, char *argv[])
   char *input;
   FILE *file = 0;
   int verbose = 0;
-  struct grub_script *script;
+  int found_input = 0;
+  struct grub_script *script = NULL;
 
   auto grub_err_t get_config_line (char **line, int cont);
   grub_err_t get_config_line (char **line, int cont __attribute__ ((unused)))
@@ -247,6 +248,7 @@ main (int argc, char *argv[])
       get_config_line(&input, 0);
       if (! input) 
 	break;
+      found_input = 1;
 
       script = grub_script_parse (input, get_config_line);
       if (script)
@@ -262,5 +264,5 @@ main (int argc, char *argv[])
   grub_fini_all ();
   if (file) fclose (file);
 
-  return (script == 0);
+  return (found_input && script == 0);
 }
